# single-file-vulkan-pathtracing

./: .clang-format  .gitmodules  CMakeLists.txt  LICENSE  README.md  main.cpp
shaders/: closesthit.rchit  closesthit.rchit.spv  common.glsl  compile.bat  miss.rmiss  miss.rmiss.spv  raygen.rgen  raygen.rgen.spv
